# nb-rs

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  pkg.nix  result
src/: main.rs
src/actions/: search.rs
src/actions/folder/: create.rs  get_notes_by_name.rs  list.rs  mod.rs  model.rs  remove.rs  search_notes.rs
src/actions/folder/sync/: mod.rs  setup.rs  sync_manual.rs  sync_note.rs
src/actions/note/: create.rs  mod.rs  model.rs  open.rs  remove.rs
src/args/: actions.rs  mod.rs  top.rs
src/args/sync/: actions.rs
src/config/: get.rs  model.rs
src/tests/: test.rs
